--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ cbor = ["serde_cbor"]
 chrono-duration = ["chrono", "iso8601-duration"]
 dataloader = ["futures-timer", "futures-channel", "lru"]
 decimal = ["rust_decimal"]
-default = ["email-validator", "tempfile", "playground", "graphiql", "default-error-impl"]
+default = ["email-validator", "tempfile", "playground", "graphiql"]
 password-strength-validator = ["zxcvbn"]
 string_number = []
 tokio-sync = ["tokio"]
@@ -28,7 +28,6 @@ tracing = ["tracinglib", "tracing-futures"]
 unblock = ["blocking"]
 dynamic-schema = []
 graphiql = ["handlebars"]
-default-error-impl = []
 playground = []
 
 [dependencies]
